fixed header top without gap

--- a/mashup-frontend/src/app/app.component.css
+++ b/mashup-frontend/src/app/app.component.css
@@ -7,6 +7,6 @@
   
   .Site-content {
     flex: 1;
-    padding-top: 70px;
+    /* padding-top: 70px; */
   }
  
